- new analysis strip at the right of the text pane (errors and warnings) - fixed some bugs in the auto-completion (would not complete for only one item) - refactored the multi-line tooltip used by the "tips" and analysis strip
[git-p4: depot-paths = "//depot/code/antlrworks/main/": change = 1939]